--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
             <a href="https://github.com/f-Dev09/my-js-practice-projects/tree/main/Tic-Tac-Toe">Repo</a>
         </div>
     </div>
+
+    <!-- Project 3: Whack a mole -->
+    <div class="card">
+        <img src="img/whack-a-mole.png" alt="Tic Tac Toe Project">
+        <h2>Tic Tac Toe</h2>
+        <div class="links">
+            <a href="whack-a-mole/index.html">Live Demo</a>
+            <a href="https://github.com/f-Dev09/my-js-practice-projects/tree/main/whac-a-mole">Repo</a>
+        </div>
+    </div>
 </div>
 
 <footer>
