--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="img/whack-a-mole.png" alt="whack-a-mole Project">
         <h2>Whack a Mole</h2>
         <div class="links">
-            <a href="whack-a-mole/index.html">Live Demo</a>
+            <a href="whac-a-mole/index.html">Live Demo</a>
             <a href="https://github.com/f-Dev09/my-js-practice-projects/tree/main/whac-a-mole">Repo</a>
         </div>
     </div>
